fix: add locale cookie header

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
                 "<node_internals>/**"
             ],
             "program": "${workspaceFolder}\\index.js",
-            "args": ["X:\\新建文件夹\\新建文件夹", "--port=7890"],
+            "args": ["X:\\新建文件夹", "--port=7890"],
         }
     ]
 }
