--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "format-rj-code",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "",
   "main": "index.js",
   "bin": "./index.js",
@@ -19,7 +19,8 @@
     "jsdom": "^16.6.0"
   },
   "scripts": {
-    "dev": "node index.js"
+    "dev": "node index.js",
+    "postinstall": "npm link"
   },
   "engines": {
     "node": ">=15"
