chore: publish config

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "lqisa",
   "license": "ISC",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.2",
     "@eslint/js": "^9.1.1",
